[package]
name = "attestation_mock_client"
version = "0.1.0"
edition = "2024"

[dependencies]
attestation_types = { path = "../attestation_types" }
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ecdsa = { version = "0.16", features = ["digest"] }
getrandom = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }
