[package]
name = "attestation_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
attestation_types = { path = "../attestation_types" }
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ecdsa = { version = "0.16", features = ["digest"] }
geo = { version = "0.28", features = ["use-serde"] }
geo-types = { version = "0.7", features = ["serde"] }
p256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
