[package]
version = "0.1.0"
name = "location-proof-script"
edition = "2021"
default-run = "location-proof"

[[bin]]
name = "location-proof"
path = "src/bin/main.rs"

[[bin]]
name = "network"
path = "src/bin/network.rs"

[dependencies]
sp1-sdk = "5.2.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
location-proof-lib = { path = "../lib" }
dotenv = "0.15.0"
chrono = "0.4"
sha2 = "0.10"
base64 = "0.22"
attestation_types = { path = "../../attestation_types" }

[build-dependencies]
sp1-build = "5.0.8"
